less/account.less
.account {
	.cover {
		background-size: cover;
		background-repeat: no-repeat;
		min-height: 200px;
		position: relative;
		margin-bottom: 1em;
		background-origin: content-box;
		width: 100%;
		top: 50px;
		position: absolute;
		left: auto;
		right: 0px;

		&:hover {
			.controls {
				.opacity(0.8);
			}
		}

		.controls {
			text-align: center;
			min-height: 200px;
			line-height: 200px;
			.opacity(0);
			.transition(opacity .15s linear);
			cursor: pointer;
			pointer-events: none;

			> * {
				pointer-events: all;
			}

			.fa {
				color: white;
				background-color: #333;
				opacity: 1;
				margin: 15px;
				padding: 5px;
			}
		}

		&.active {
			&:hover {
				cursor: move;
			}

			.controls {
				> * {
					display: none;
				}
			}

			.save {
				display: inline-block;
			}
		}

		&.saving {
			.save {
				display: none;
			}

			.indicator {
				display: inline-block;
			}
		}

		.save, .indicator {
			display: inline-block;
			position: absolute;
			top: 1em;
			right: 2em;
			opacity: 1;
			background-color: @brand-primary;
			color: #eee;
			padding: 0.5em;
			font-weight: bold;

			&:hover {
				cursor: pointer;
			}
		}

		.save {
			display: none;
		}

		.indicator {
			display: none;
		}
	}

	@media (min-width: @screen-md-min) {
		margin-top: 300px;
		
		.cover {
			min-height: 300px;

			.controls {
				min-height: 300px;
				line-height: 300px;
			}
		}
	}
}





// 
.nav-pills.account-sub-links {
	border:none;

	> li {
		float:right;
	}
}

.account-picture-block{
	vertical-align:top;
	margin-bottom:20px;

	div {
		margin-bottom: 10px;
	}

	.dropdown-toggle {
		cursor: pointer;
	}

	.status {
		padding-bottom: 5px;
	}
}

.user-profile-picture {
	.user-icon-style(128px, 7.5rem, 50%);
}

.user-picture-label {
	font-size:20px;
}


.account-bio-label{
	display:block;
	font-size:14px;
	opacity:0.8;
}

.account-bio-value {
	display:block;
	margin-bottom:10px;
	font-size:18px;
}


.account-username-box {
	margin-bottom:10px;

	.open #profile {
		background-color: lighten(@brand-primary, 10%);
	}
}

.account-username{
  font-size:20px;
  font-weight:bold;
}


.account-stats {
	.formatted-number, .human-readable-number {
		font-size:30px;
	}

	.account-bio-label {
		font-size:16px;
		width:100px;
	}
}

